llvm-toolchain-10 (1:10.0.0~+rc1-1~exp1) experimental; urgency=medium

  [ Gianfranco Costamagna ]
  * fix lldb-10 -P path print (Closes: #945445)
  * Fix lldb python installation path and symlinks
  * Drop version constraint from libffi-dev library, satisfied since
    old-old-stable

  [ Sylvestre Ledru ]
  * First RC release

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 03 Feb 2020 10:30:50 +0100

llvm-toolchain-10 (1:10~++20200121023453+de4b2a7fad6-1~exp1) experimental; urgency=medium

  * Branch llvm-toolchain-10 into its own branch
  * Merge recent 9 changes (python 3 and testsuite mostly)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 21 Jan 2020 14:38:02 +0100

llvm-toolchain-snapshot (1:10~+20191229111838+6991d5728f1-1~exp1) experimental; urgency=medium

  * experimental New snapshot release
  * Add a '+' in the version (as the old upload is high than the one without)
    Will be removed in 11
  * Sync 9 into 10
  * Change of the version layout date+short git version
  * Install /usr/lib/llvm-@LLVM_VERSION@/lib/libarcher_static.a
    /usr/lib/llvm-@LLVM_VERSION@/lib/libarcher.so in libomp-X-dev
  * Install usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION_FULL@/bin/hwasan_symbolize in clang-tools-X.Y
  * Introduce python3-clang-10 (closes: #942826)
  * Remove python-lldb-10
  * Remove Python 2 deps (Closes: #945695)
  * Disable the polly testsuite:
    - freezing in the current build
    - not a big deal if failing

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 29 Dec 2019 12:47:15 +0100

llvm-toolchain-snapshot (1:10~+201911120943210600592dd459242-1~exp1) experimental; urgency=medium

  * Repack to move to git
  * Change the versionning scheme to git:
    Infos of the last commit
    - ~+ (this syntax is to make sure that this version > ~svn)
    - date
    - hour/minute/second
    - short git hash
  * Move the checkout of the sources from svn to git
  * Use -DLLVM_ENABLE_PROJECTS instead of symlinks