@@ -235,7 +235,13 @@ ifneq (,$(filter $(DEB_HOST_ARCH),$(BINUTILS_GOLD_ARCHS)))
 # armhf is not yet quite ready for Thin, it FTBFS
 # see https://buildd.debian.org/status/fetch.php?pkg=llvm-toolchain-8&arch=armhf&ver=1%3A8.0.1%7E%2Brc2-1%7Eexp1&stamp=1560334266&raw=0
 ifeq (,$(filter $(DEB_HOST_ARCH), armhf))
-	CMAKE_EXTRA += -DLLVM_ENABLE_LTO="Thin"
+# Use BOOTSTRAP_LLVM_ENABLE_LTO to make sure that it isn't used
+# when running stage1 with gcc
+# For now, disable ThinLTO usage because:
+# * LLVM_ENABLE_LTO doesn't work with gcc >= 9 (option not accepted)
+# * BOOTSTRAP_LLVM_ENABLE_LTO is producing some large binary
+#   See https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=943623
+#	CMAKE_EXTRA += -DBOOTSTRAP_LLVM_ENABLE_LTO="Thin"
 endif
 endif
 endif
